@startuml
@startuml


package Model{

    class Goal {
        + name: String
        + priority: Priority
        + isDone: Boolean
    }

    Goal *- GoalPriority

    Goal *- GoalStatus
}

package View{
    class InitialLoginView{
    }

    class HomeView {
    }

    class SettingsView{
    }
}

package ViewModel{
    class SignupViewModel{
        login()
        user: User
        pets: List<Pet>
    }
    class HomeViewModel {
        addGoal()
        markGoalDone()
        user: User
    }
    class SettingsViewModel{
        userSettings: UserSettings
        saveSettings()
    }
}

package Repository{
    class UserRepository {
        getUser()
        saveUser()
    }

    class GoalRepository {
        getGoals()
        saveGoal()
        updateGoal()
    }
}
package DAO{
    class UserDAO


    class GoalDAO
}

class AppConfig{
    pets: List<Pet>
}

AppConfig o-- Pet
InitialLoginView .down.> InitialLoginViewModel
HomeView .down.> HomeViewModel
SettingsView .down.> SettingsViewModel

InitialLoginViewModel .down..> UserRepository

HomeViewModel .down> GoalRepository
HomeViewModel .down> UserRepository

SettingsViewModel .down.> UserRepository


UserRepository ..down> UserDAO
GoalRepository ..down> GoalDAO


UserDAO -down-> User
GoalDAO -down-> Goal
@enduml

@enduml